--- a/Tech_Advertising_EDA.ipynb
+++ b/Tech_Advertising_EDA.ipynb
@@ -1192,21 +1192,28 @@
    "source": [
     "#### Summary from the observations\n",
     "\n",
-    "Columns with correct types:\n",
-    "- age, Gender, Purchase_Categories, Product_Search_Method, Search_Result_Exploration, Customer_Reviews_Importance, Add_to_Cart_Browsing, Cart_Abandonment_Factors, Review_Left, Service_Appreciation, Improvement_Areas, Rating_Accuracy, Shopping_Satisfaction are mostly fine.\n",
+    "**Columns with correct types:**\n",
+    "- `campaign_id`, `quarter`, `hour_of_day`, `campaign_day`, `creative_age_days`, `quality_score`, `actual_cpc`, `impressions`, `clicks`, `conversions`, `ad_spend`, `revenue`, `bounce_rate`, `avg_session_duration_seconds`, `pages_per_session`, `CTR`, `CPC`, `conversion_rate`, `CPA`, `ROAS`, `profit` are mostly in appropriate numeric or identifier formats.\n",
+    "- Boolean fields `has_call_to_action` and `retargeting_flag` are correctly represented but should be checked for consistency.\n",
     "\n",
-    "Columns needing conversions/cleaning:\n",
-    "- Timestamp is stored as str instead of datetime and should be converted for any time-based analysis.\n",
-    "- Personalized_Recommendation_Frequency appears twice with different data types (str and int64). This duplication must be resolved by renaming or removing one of them.\n",
+    "**Columns needing conversions / cleaning:**\n",
+    "- `start_date` is stored as `str` instead of `datetime` and should be converted to enable temporal analysis.\n",
+    "- The following string-based descriptive columns should be converted to categorical types:\n",
+    "  - `campaign_objective`, `platform`, `ad_placement`\n",
+    "  - `device_type`, `operating_system`\n",
+    "  - `creative_format`, `creative_size`, `ad_copy_length`, `creative_emotion`\n",
+    "  - `target_audience_age`, `target_audience_gender`\n",
+    "  - `audience_interest_category`, `income_bracket`, `purchase_intent_score`\n",
+    "  - `day_of_week`, `industry_vertical`, `budget_tier`\n",
     "\n",
-    "Columns with potential considerations (ordinal categorical variables):\n",
-    "- Purchase_Frequency, Browsing_Frequency, Cart_Completion_Frequency, Saveforlater_Frequency, Review_Reliability, Review_Helpfulness, Recommendation_Helpfulness are categorical but represent frequency/degree (e.g., Never to Always, Occasionally to Heavily). Consider marking them as ordered categorical for meaningful analysis.\n",
+    "**Columns with potential considerations (ordinal categorical variables):**\n",
+    "- `purchase_intent_score`, `ad_copy_length`, and `budget_tier` represent ordered levels (e.g., Low → Medium → High) and may be treated as ordered categorical variables.\n",
+    "- `quality_score` is numeric but ordinal in nature and should be interpreted accordingly.\n",
     "\n",
-    "Columns with potential anomalies / considerations:\n",
-    "- Purchase_Categories: multiple categories per entry separated by ; may require splitting or encoding.\n",
-    "- Service_Appreciation: entries like . or duplicates (Customer service vs Customer service) may require cleaning.\n",
-    "- Improvement_Areas: contains minor variations, punctuation differences, or long strings; may require grouping or text cleaning.\n",
-    "    - Specifically, there is a row with . which is likely an error and can be replaced with the mode of the column."
+    "**Columns with potential anomalies / considerations:**\n",
+    "- Funnel metrics (`clicks`, `conversions`) should be validated to ensure logical constraints (`conversions ≤ clicks ≤ impressions`).\n",
+    "- Financial metrics (`ad_spend`, `revenue`, `profit`) may include extreme values or negative profits and should be reviewed for outliers rather than removed.\n",
+    "- Derived metrics (`CTR`, `conversion_rate`, `CPA`, `ROAS`) depend on base columns and should be validated to avoid division-by-zero or inconsistent values.\n"
    ]
   },
   {
