code cleaning finished

--- a/Tech_Advertising_EDA.ipynb
+++ b/Tech_Advertising_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "7a6bce0a",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "7a6f6de0",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "dd192073",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "c1593bbf",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "      dtype='str')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "d0572175",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
        "max     6379.940000    487.300000  2.750398e+06  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "8df28312",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "e466b79b",
    "metadata": {},
    "outputs": [
@@ -1194,7 +1194,7 @@
     "\n",
     "**Columns with correct types:**\n",
     "- `campaign_id`, `quarter`, `hour_of_day`, `campaign_day`, `creative_age_days`, `quality_score`, `actual_cpc`, `impressions`, `clicks`, `conversions`, `ad_spend`, `revenue`, `bounce_rate`, `avg_session_duration_seconds`, `pages_per_session`, `CTR`, `CPC`, `conversion_rate`, `CPA`, `ROAS`, `profit` are mostly in appropriate numeric or identifier formats.\n",
-    "- Boolean fields `has_call_to_action` and `retargeting_flag` are correctly represented but should be checked for consistency.\n",
+    "- Boolean fields `has_call_to_action` and `retargeting_flag` are correctly represented.\n",
     "\n",
     "**Columns needing conversions / cleaning:**\n",
     "- `start_date` is stored as `str` instead of `datetime` and should be converted to enable temporal analysis.\n",
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "797898e7",
    "metadata": {},
    "outputs": [
@@ -1303,6 +1303,262 @@
    "source": [
     "#### Since there are no missing values, the data cleaning process will focus - data type versions, standardization and removal of unnecessary columns"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a64e5c6b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert start_date from string to datetime\n",
+    "df['start_date'] = pd.to_datetime(df['start_date'], errors='coerce')\n",
+    "\n",
+    "# List of columns to convert to categorical type\n",
+    "categorical_cols = [\n",
+    "    'campaign_objective', 'platform', 'ad_placement',\n",
+    "    'device_type', 'operating_system',\n",
+    "    'creative_format', 'creative_size', 'ad_copy_length', 'creative_emotion',\n",
+    "    'target_audience_age', 'target_audience_gender',\n",
+    "    'audience_interest_category', 'income_bracket', 'purchase_intent_score',\n",
+    "    'day_of_week', 'industry_vertical', 'budget_tier'\n",
+    "]\n",
+    "\n",
+    "# Convert string-based columns to categorical dtype\n",
+    "for col in categorical_cols:\n",
+    "    df[col] = df[col].astype('category')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "26a0ffca",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "purchase_intent_score    category\n",
+       "ad_copy_length           category\n",
+       "budget_tier              category\n",
+       "quality_score               int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['purchase_intent_score', 'ad_copy_length','budget_tier', 'quality_score']].dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "074ebee9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    10000.000000\n",
+       "mean         5.527400\n",
+       "std          1.553541\n",
+       "min          1.000000\n",
+       "25%          4.000000\n",
+       "50%          6.000000\n",
+       "75%          7.000000\n",
+       "max         10.000000\n",
+       "Name: quality_score, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['quality_score'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "7bfdaeb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Funnel violations: 0\n",
+      "CTR mismatches: 9538\n",
+      "Conversion rate mismatches: 9210\n",
+      "CPA mismatches: 7556\n",
+      "ROAS mismatches: 9403\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ------------------------------------\n",
+    "# Funnel logic validation\n",
+    "# ------------------------------------\n",
+    "\n",
+    "df['funnel_violation'] = (\n",
+    "    (df['conversions'] > df['clicks']) |\n",
+    "    (df['clicks'] > df['impressions'])\n",
+    ")\n",
+    "\n",
+    "# ------------------------------------\n",
+    "# Derived metric validation (safe division)\n",
+    "# ------------------------------------\n",
+    "\n",
+    "eps = 1e-6  # tolerance for float comparison\n",
+    "\n",
+    "df['CTR_calc'] = (df['clicks'] / df['impressions']) * 100\n",
+    "df['conversion_rate_calc'] = (df['conversions'] / df['clicks']) * 100\n",
+    "df['CPA_calc'] = df['ad_spend'] / df['conversions']\n",
+    "df['ROAS_calc'] = df['revenue'] / df['ad_spend']\n",
+    "\n",
+    "df['CTR_mismatch'] = (~df['CTR'].isna()) & (abs(df['CTR'] - df['CTR_calc']) > eps)\n",
+    "df['conversion_rate_mismatch'] = (~df['conversion_rate'].isna()) & (\n",
+    "    abs(df['conversion_rate'] - df['conversion_rate_calc']) > eps\n",
+    ")\n",
+    "df['CPA_mismatch'] = (~df['CPA'].isna()) & (abs(df['CPA'] - df['CPA_calc']) > eps)\n",
+    "df['ROAS_mismatch'] = (~df['ROAS'].isna()) & (abs(df['ROAS'] - df['ROAS_calc']) > eps)\n",
+    "\n",
+    "# ------------------------------------\n",
+    "# Print EDA checks summary\n",
+    "# ------------------------------------\n",
+    "\n",
+    "print(\"Funnel violations:\", df['funnel_violation'].sum())\n",
+    "print(\"CTR mismatches:\", df['CTR_mismatch'].sum())\n",
+    "print(\"Conversion rate mismatches:\", df['conversion_rate_mismatch'].sum())\n",
+    "print(\"CPA mismatches:\", df['CPA_mismatch'].sum())\n",
+    "print(\"ROAS mismatches:\", df['ROAS_mismatch'].sum())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fe9c909",
+   "metadata": {},
+   "source": [
+    "#### Observations \n",
+    "\n",
+    "- `Funnel` metrics are logically consistent across the dataset, with no cases where conversions exceed clicks or clicks exceed impressions.\n",
+    "\n",
+    "- `Derived performance metrics (CTR, conversion rate, CPA, ROAS)` do not reliably reconcile with base metrics, suggesting they were pre-computed or rounded; therefore, recalculating these metrics from raw fields is recommended for analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4fe9c46f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ------------------------------------\n",
+    "# Recalculate derived performance metrics\n",
+    "# ------------------------------------\n",
+    "\n",
+    "df['CTR'] = (df['clicks'] / df['impressions']) * 100\n",
+    "df['conversion_rate'] = (df['conversions'] / df['clicks']) * 100\n",
+    "df['CPA'] = df['ad_spend'] / df['conversions']\n",
+    "df['ROAS'] = df['revenue'] / df['ad_spend']\n",
+    "\n",
+    "# ------------------------------------\n",
+    "# Handle division-by-zero cases\n",
+    "# ------------------------------------\n",
+    "\n",
+    "df.loc[df['impressions'] == 0, 'CTR'] = 0\n",
+    "df.loc[df['clicks'] == 0, 'conversion_rate'] = 0\n",
+    "df.loc[df['conversions'] == 0, 'CPA'] = None\n",
+    "df.loc[df['ad_spend'] == 0, 'ROAS'] = None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "279ef2bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "campaign_id                                str\n",
+       "campaign_objective                    category\n",
+       "platform                              category\n",
+       "ad_placement                          category\n",
+       "device_type                           category\n",
+       "operating_system                      category\n",
+       "creative_format                       category\n",
+       "creative_size                         category\n",
+       "ad_copy_length                        category\n",
+       "has_call_to_action                        bool\n",
+       "creative_emotion                      category\n",
+       "creative_age_days                        int64\n",
+       "target_audience_age                   category\n",
+       "target_audience_gender                category\n",
+       "audience_interest_category            category\n",
+       "income_bracket                        category\n",
+       "purchase_intent_score                 category\n",
+       "retargeting_flag                          bool\n",
+       "start_date                      datetime64[us]\n",
+       "quarter                                  int64\n",
+       "day_of_week                           category\n",
+       "hour_of_day                              int64\n",
+       "campaign_day                             int64\n",
+       "quality_score                            int64\n",
+       "actual_cpc                             float64\n",
+       "impressions                              int64\n",
+       "clicks                                   int64\n",
+       "conversions                              int64\n",
+       "ad_spend                               float64\n",
+       "revenue                                float64\n",
+       "bounce_rate                            float64\n",
+       "avg_session_duration_seconds             int64\n",
+       "pages_per_session                      float64\n",
+       "industry_vertical                     category\n",
+       "budget_tier                           category\n",
+       "CTR                                    float64\n",
+       "CPC                                    float64\n",
+       "conversion_rate                        float64\n",
+       "CPA                                    float64\n",
+       "ROAS                                   float64\n",
+       "profit                                 float64\n",
+       "funnel_violation                          bool\n",
+       "ad_spend_outlier                          bool\n",
+       "revenue_outlier                           bool\n",
+       "profit_outlier                            bool\n",
+       "CTR_calc                               float64\n",
+       "conversion_rate_calc                   float64\n",
+       "CPA_calc                               float64\n",
+       "ROAS_calc                              float64\n",
+       "CTR_mismatch                              bool\n",
+       "conversion_rate_mismatch                  bool\n",
+       "CPA_mismatch                              bool\n",
+       "ROAS_mismatch                             bool\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2d092e0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
