small analysis added

--- a/Tech_Advertising_EDA.ipynb
+++ b/Tech_Advertising_EDA.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "7a6bce0a",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "db0d927a",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7a6f6de0",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
        "[5 rows x 41 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "dd192073",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c1593bbf",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
        "      dtype='str')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d0572175",
    "metadata": {},
    "outputs": [
@@ -697,7 +697,7 @@
        "max     6379.940000    487.300000  2.750398e+06  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "8df28312",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "e466b79b",
    "metadata": {},
    "outputs": [
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "797898e7",
    "metadata": {},
    "outputs": [
@@ -1306,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "a64e5c6b",
    "metadata": {},
    "outputs": [],
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "26a0ffca",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1345,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "074ebee9",
    "metadata": {},
    "outputs": [
@@ -1374,7 +1374,7 @@
        "Name: quality_score, dtype: float64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "7bfdaeb5",
    "metadata": {},
    "outputs": [
@@ -1454,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "4fe9c46f",
    "metadata": {},
    "outputs": [],
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "279ef2bb",
    "metadata": {},
    "outputs": [
@@ -1540,7 +1540,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "85723499",
    "metadata": {},
    "outputs": [
@@ -8502,7 +8502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "d9fbc294",
    "metadata": {},
    "outputs": [
@@ -15402,7 +15402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "6c4a4e65",
    "metadata": {},
    "outputs": [
@@ -63153,7 +63153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "30585327",
    "metadata": {},
    "outputs": [
@@ -66061,7 +66061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "f8e8d6a8",
    "metadata": {},
    "outputs": [
@@ -68833,7 +68833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "c6601a08",
    "metadata": {},
    "outputs": [
@@ -69982,7 +69982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "1962f122",
    "metadata": {},
    "outputs": [
@@ -71139,7 +71139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "d093d7cf",
    "metadata": {},
    "outputs": [
@@ -71149,7 +71149,7 @@
        "np.int64(705392230)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71160,7 +71160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "id": "e5ba82c7",
    "metadata": {},
    "outputs": [
@@ -72159,7 +72159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "id": "45f93c59",
    "metadata": {},
    "outputs": [
@@ -73317,7 +73317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "93a39373",
    "metadata": {},
    "outputs": [
@@ -74318,7 +74318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "485ad1c5",
    "metadata": {},
    "outputs": [
@@ -76148,7 +76148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "id": "c24eaf1f",
    "metadata": {},
    "outputs": [
@@ -77980,7 +77980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "id": "300b79de",
    "metadata": {},
    "outputs": [
@@ -78929,7 +78929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 30,
    "id": "d1fc5b85",
    "metadata": {},
    "outputs": [
@@ -79929,7 +79929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 31,
    "id": "0d555d11",
    "metadata": {},
    "outputs": [
@@ -81150,8 +81150,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "d0924904",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['campaign_id', 'campaign_objective', 'platform', 'ad_placement',\n",
+       "       'device_type', 'operating_system', 'creative_format', 'creative_size',\n",
+       "       'ad_copy_length', 'has_call_to_action', 'creative_emotion',\n",
+       "       'creative_age_days', 'target_audience_age', 'target_audience_gender',\n",
+       "       'audience_interest_category', 'income_bracket', 'purchase_intent_score',\n",
+       "       'retargeting_flag', 'start_date', 'quarter', 'day_of_week',\n",
+       "       'hour_of_day', 'campaign_day', 'quality_score', 'actual_cpc',\n",
+       "       'impressions', 'clicks', 'conversions', 'ad_spend', 'revenue',\n",
+       "       'bounce_rate', 'avg_session_duration_seconds', 'pages_per_session',\n",
+       "       'industry_vertical', 'budget_tier', 'CTR', 'CPC', 'conversion_rate',\n",
+       "       'CPA', 'ROAS', 'profit', 'funnel_violation', 'CTR_calc',\n",
+       "       'conversion_rate_calc', 'CPA_calc', 'ROAS_calc', 'CTR_mismatch',\n",
+       "       'conversion_rate_mismatch', 'CPA_mismatch', 'ROAS_mismatch',\n",
+       "       'year_month', 'month'],\n",
+       "      dtype='str')"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d1900281",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(7.524943665208115)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ROAS'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9b548b4",
    "metadata": {},
    "outputs": [],
    "source": []
