Code Cleaning and Report Edited

--- a/Tech_Advertising_EDA.ipynb
+++ b/Tech_Advertising_EDA.ipynb
@@ -69981,6 +69981,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d09a8754",
+   "metadata": {},
+   "source": [
+    "The following Graphs are only a recreation of the above graphs for the sake of Report"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "1962f122",
@@ -81150,64 +81158,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "d0924904",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['campaign_id', 'campaign_objective', 'platform', 'ad_placement',\n",
-       "       'device_type', 'operating_system', 'creative_format', 'creative_size',\n",
-       "       'ad_copy_length', 'has_call_to_action', 'creative_emotion',\n",
-       "       'creative_age_days', 'target_audience_age', 'target_audience_gender',\n",
-       "       'audience_interest_category', 'income_bracket', 'purchase_intent_score',\n",
-       "       'retargeting_flag', 'start_date', 'quarter', 'day_of_week',\n",
-       "       'hour_of_day', 'campaign_day', 'quality_score', 'actual_cpc',\n",
-       "       'impressions', 'clicks', 'conversions', 'ad_spend', 'revenue',\n",
-       "       'bounce_rate', 'avg_session_duration_seconds', 'pages_per_session',\n",
-       "       'industry_vertical', 'budget_tier', 'CTR', 'CPC', 'conversion_rate',\n",
-       "       'CPA', 'ROAS', 'profit', 'funnel_violation', 'CTR_calc',\n",
-       "       'conversion_rate_calc', 'CPA_calc', 'ROAS_calc', 'CTR_mismatch',\n",
-       "       'conversion_rate_mismatch', 'CPA_mismatch', 'ROAS_mismatch',\n",
-       "       'year_month', 'month'],\n",
-       "      dtype='str')"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "id": "d1900281",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(7.524943665208115)"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['ROAS'].mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "a9b548b4",
+   "id": "99a5cf98",
    "metadata": {},
    "outputs": [],
    "source": []
